// Vitest Snapshot v1

exports[`applyDefaultPlugins > should apply default plugins correctly 1`] = `
{
  "builtins": {
    "define": {
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": true,
      "refresh": true,
      "runtime": "automatic",
    },
  },
  "cache": {
    "buildDependencies": [
      "<ROOT>/package.json",
      "<ROOT>/tsconfig.json",
    ],
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-development",
    "type": "filesystem",
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<ROOT>/compiled/@rspack/less-loader",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "builtinLoader": "sass-loader",
            "options": {
              "rspackImporter": true,
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "publicPath": "/",
  },
  "resolve": {
    "alias": {},
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when prod 1`] = `
{
  "builtins": {
    "define": {
      "process.env.NODE_ENV": "\\"production\\"",
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": false,
      "refresh": false,
      "runtime": "automatic",
    },
  },
  "cache": {
    "buildDependencies": [
      "<ROOT>/package.json",
      "<ROOT>/tsconfig.json",
    ],
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-production",
    "type": "filesystem",
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": false,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": false,
            },
          },
          {
            "loader": "<ROOT>/compiled/@rspack/less-loader",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
              },
              "sourceMap": false,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": false,
            },
          },
          {
            "builtinLoader": "sass-loader",
            "options": {
              "rspackImporter": true,
              "sourceMap": false,
            },
          },
        ],
      },
    ],
  },
  "output": {
    "chunkFilename": "static/js/async/[name].[contenthash:8].js",
    "cssChunkFilename": "static/css/async/[name].[contenthash:8].css",
    "cssFilename": "static/css/[name].[contenthash:8].css",
    "filename": "static/js/[name].[contenthash:8].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "publicPath": "/",
  },
  "resolve": {
    "alias": {},
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
}
`;

exports[`tools.rspack > should match snapshot 1`] = `
{
  "builtins": {
    "define": {
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "progress": {
      "prefix": "Client",
    },
    "react": {
      "development": true,
      "refresh": true,
      "runtime": "automatic",
    },
  },
  "cache": {
    "buildDependencies": [
      "<ROOT>/package.json",
      "<ROOT>/tsconfig.json",
    ],
    "cacheDirectory": "<ROOT>/node_modules/.cache/rspack",
    "name": "web-development",
    "type": "filesystem",
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": /\\\\\\.test\\$/,
        "use": [
          {
            "builtinLoader": "sass-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.css\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.less\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<ROOT>/compiled/@rspack/less-loader",
            "options": {
              "implementation": "<ROOT>/compiled/less",
              "lessOptions": {
                "javascriptEnabled": true,
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
        "type": "css",
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
            "options": {
              "modules": {
                "auto": true,
                "generateScopedName": "[path][name]__[local]--[hash:base64:5]",
                "localsConvention": "camelCase",
              },
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "> 0.01%",
                        "not dead",
                        "not op_mini all",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "builtinLoader": "sass-loader",
            "options": {
              "rspackImporter": true,
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "publicPath": "/",
  },
  "plugins": [
    TestPlugin {
      "name": "TestPlugin",
    },
  ],
  "resolve": {
    "alias": {},
    "extensions": [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
    "tsConfigPath": "<ROOT>/tsconfig.json",
  },
}
`;
